Wed Mar 17 19:48:56 GMT 2004 (njh)
----------------------------------
  * clamav-milter: upissued history to 0.70
  * libclamav/message.c: Handle spaces before the disposition type
  * libclamav/mbox.c:	Added some speed ups and reduced memory usage when
  		scanning embedded RFC822 messages

Wed Mar 17 15:06:44 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: Add VBA signature for MacOffice X

Wed Mar 17 11:53:05 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: VBA alignment check. Should now work with
	all MacOffice documents.

Wed Mar 17 09:32:45 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: Add support for MacOffice98 documents

Tue Mar 16 20:43:20 CET 2004 (tk)
---------------------------------
  * libclamav: unrarlib: don't use UnstoreFile() because it causes memory
	       corruption. Restored support for standard archives (yesterday's
	       fix disabled RAR support completely).

Mon Mar 15 20:53:10 CET 2004 (tk)
---------------------------------
  * clamav-milter: version number increased to 0.70
  V 0.70-rc

Mon Mar 15 18:40:44 GMT 2004 (trog)
-----------------------------------
  * libvlamav/ole2_extract.c: fix cli_malloc() error

Mon Mar 15 17:05:01 CET 2004 (tk)
---------------------------------
  * libclamav: unrarlib: fixed segfault with some Bagle's RAR archives

Sun Mar 14 21:48:25 CET 2004 (tk)
---------------------------------
  * etc/clamav.conf: ScanOLE2 enabled by default
  * doc: manuals updated
  * fixed gcc warnings

Sat Mar 13 23:14:44 CET 2004 (tk)
---------------------------------
  * doc: clamdoc.pdf - updated (for 0.70) and slightly reorganized

Sat Mar 13 14:28:24 GMT 2004 (trog)
-----------------------------------
  * clamd: remove mutex lock in SIGUSR2 code. Using a
	mutex in a signal handler is not allowed.

Sat Mar 13 13:52:51 CET 2004 (tk)
---------------------------------
  * clamd: support SIGUSR2 and force a database reload
