@@ -1,3 +1,8 @@
+Thu Mar 18 09:56:24 GMT 2004 (trog)
+-----------------------------------
+  * libclamav/vba_extract.c: Simplify the code, and make it work all relevant
+	sample documents I have.
+
 Wed Mar 17 19:48:56 GMT 2004 (njh)
 ----------------------------------
   * clamav-milter: upissued history to 0.70
